--- a/src/main/resources/views/PaneUsuario.fxml
+++ b/src/main/resources/views/PaneUsuario.fxml
@@ -192,149 +192,12 @@
                                     <Insets bottom="2.0" left="1.0" />
                                  </padding>
                               </Label>
-                              <VBox GridPane.rowIndex="1">
-                                 <children>
-                                    <HBox fx:id="hBoxDispositivo1" prefHeight="30.0" prefWidth="200.0">
-                                       <children>
-                                          <ImageView fx:id="imgDispositivo1" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/others/pcIcon.png" />
-                                             </image>
-                                             <HBox.margin>
-                                                <Insets top="5.0" />
-                                             </HBox.margin>
-                                          </ImageView>
-                                          <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="25.0" text="·" textAlignment="CENTER" textFill="WHITE">
-                                             <font>
-                                                <Font size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="lblDispositivo1" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <ImageView fx:id="imgDeleteDisp1" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgDeleteDisp1Pressed" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/others/remove.png" />
-                                             </image>
-                                          </ImageView>
-                                       </children>
-                                    </HBox>
-                                    <HBox fx:id="hBoxDispositivo2" layoutX="10.0" layoutY="10.0" prefHeight="30.0" prefWidth="200.0">
-                                       <children>
-                                          <ImageView fx:id="imgDispositivo2" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/others/pcIcon.png" />
-                                             </image>
-                                             <HBox.margin>
-                                                <Insets top="5.0" />
-                                             </HBox.margin>
-                                          </ImageView>
-                                          <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="25.0" text="·" textAlignment="CENTER" textFill="WHITE">
-                                             <font>
-                                                <Font size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="lblDispositivo2" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <ImageView fx:id="imgDeleteDisp2" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgDeleteDisp2Pressed" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/others/remove.png" />
-                                             </image>
-                                          </ImageView>
-                                       </children>
-                                    </HBox>
-                                    <HBox fx:id="hBoxDispositivo3" layoutX="10.0" layoutY="40.0" prefHeight="30.0" prefWidth="200.0">
-                                       <children>
-                                          <ImageView fx:id="imgDispositivo3" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/others/pcIcon.png" />
-                                             </image>
-                                             <HBox.margin>
-                                                <Insets top="5.0" />
-                                             </HBox.margin>
-                                          </ImageView>
-                                          <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="25.0" text="·" textAlignment="CENTER" textFill="WHITE">
-                                             <font>
-                                                <Font size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="lblDispositivo3" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <ImageView fx:id="imgDeleteDisp3" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgDeleteDisp3Pressed" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/others/remove.png" />
-                                             </image>
-                                          </ImageView>
-                                       </children>
-                                    </HBox>
-                                    <HBox fx:id="hBoxDispositivo4" layoutX="10.0" layoutY="70.0" prefHeight="30.0" prefWidth="200.0">
-                                       <children>
-                                          <ImageView fx:id="imgDispositivo4" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/others/pcIcon.png" />
-                                             </image>
-                                             <HBox.margin>
-                                                <Insets top="5.0" />
-                                             </HBox.margin>
-                                          </ImageView>
-                                          <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="25.0" text="·" textAlignment="CENTER" textFill="WHITE">
-                                             <font>
-                                                <Font size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="lblDispositivo4" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <ImageView fx:id="imgDeleteDisp4" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#imgDeleteDisp4Pressed" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/others/remove.png" />
-                                             </image>
-                                          </ImageView>
-                                       </children>
-                                    </HBox>
-                                    <HBox fx:id="hBoxDispositivo5" prefHeight="30.0" prefWidth="200.0">
-                                       <children>
-                                          <ImageView fx:id="imgDispositivo5" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/others/pcIcon.png" />
-                                             </image>
-                                             <HBox.margin>
-                                                <Insets top="5.0" />
-                                             </HBox.margin>
-                                          </ImageView>
-                                          <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="25.0" text="·" textAlignment="CENTER" textFill="WHITE">
-                                             <font>
-                                                <Font size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="lblDispositivo5" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
-                                             <font>
-                                                <Font name="System Bold" size="12.0" />
-                                             </font>
-                                          </Label>
-                                          <ImageView fx:id="imgDeleteDisp4" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../images/others/remove.png" />
-                                             </image>
-                                          </ImageView>
-                                       </children>
-                                    </HBox>
-                                 </children>
+                              <VBox fx:id="vBoxDispositivos" GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets left="10.0" top="10.0" />
                                  </GridPane.margin>
                               </VBox>
-                              <Button fx:id="btnEditarDispositivos" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnEditarDispositivosPressed" prefWidth="200.0" text="Editar dispositivos" GridPane.rowIndex="3">
+                              <Button fx:id="btnAddDispositivo" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnAddDispositivoPressed" prefWidth="200.0" text="Añadir dispositivo" GridPane.rowIndex="3">
                                  <padding>
                                     <Insets bottom="6.0" left="40.0" right="40.0" top="6.0" />
                                  </padding>
@@ -365,6 +228,33 @@
                   <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
                </VBox.margin>
             </VBox>
+            <HBox fx:id="hBoxDispositivo1" prefHeight="30.0" prefWidth="200.0">
+               <children>
+                  <ImageView fx:id="imgDispositivo1" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/others/pcIcon.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets top="5.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="25.0" text="·" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblDispositivo1" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <ImageView fx:id="imgDeleteDisp1" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/others/remove.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
          </children>
       </VBox>
    </children>
