--- a/src/main/resources/views/PaneBusqueda.fxml
+++ b/src/main/resources/views/PaneBusqueda.fxml
@@ -35,13 +35,13 @@
                      <children>
                         <HBox fx:id="line0" alignment="CENTER" prefHeight="216.0" prefWidth="1287.0" spacing="35.0">
                            <children>
-                              <ImageView fx:id="imgResultado00" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado01" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado02" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado03" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado04" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado05" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado06" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado00" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed00" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado01" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed01" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado02" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed02" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado03" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed03" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado04" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed04" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado05" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed05" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado06" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed06" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                            </children>
                            <GridPane.margin>
                               <Insets />
@@ -49,36 +49,27 @@
                         </HBox>
                         <HBox fx:id="line1" alignment="CENTER" prefHeight="100.0" prefWidth="1200.0" spacing="35.0" GridPane.rowIndex="1">
                            <children>
-                              <ImageView fx:id="imgResultado10" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado11" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado12" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado13" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado14" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado15" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado16" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado10" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed10" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado11" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed11" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado12" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed12" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado13" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed13" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado14" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed14" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado15" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed15" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado16" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed16" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
                         <HBox fx:id="line2" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="2">
                            <children>
-                              <ImageView fx:id="imgResultado20" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado21" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado22" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado23" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado24" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado25" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado26" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado20" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed20" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado21" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed21" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado22" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed22" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado23" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed23" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado24" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed24" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado25" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed25" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                              <ImageView fx:id="imgResultado26" fitHeight="200.0" fitWidth="150.0"  pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
                         <HBox fx:id="line3" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="3">
-                           <children>
-                              <ImageView fx:id="imgResultado27" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado28" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado29" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado30" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado31" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado32" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado33" fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                           </children>
                            <GridPane.margin>
                               <Insets bottom="20.0" />
                            </GridPane.margin>
