--- a/src/main/resources/views/PaneDetalle.fxml
+++ b/src/main/resources/views/PaneDetalle.fxml
@@ -34,14 +34,10 @@
                             <RowConstraints minHeight="35.0" prefHeight="35.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <ImageView fx:id="imgPoster" fitHeight="380.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                                 <image>
-                                    <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                                 </image>
-                              </ImageView>
+                              <ImageView fx:id="imgPoster" fitHeight="380.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                               <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                                  <children>
-                                    <Label fx:id="lblTitulo" prefHeight="90.0" prefWidth="570.0" text="TITULO PELICULA" textFill="WHITE" wrapText="true">
+                                    <Label fx:id="lblTitulo" prefHeight="90.0" prefWidth="570.0" textFill="WHITE" wrapText="true">
                                        <font>
                                           <Font name="System Bold" size="30.0" />
                                        </font>
@@ -49,7 +45,7 @@
                                           <Insets bottom="10.0" top="4.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label fx:id="lblSubtitulo" alignment="TOP_LEFT" prefHeight="30.0" prefWidth="563.0" text="Director · Genero" textFill="#ec1b1b">
+                                    <Label fx:id="lblSubtitulo" alignment="TOP_LEFT" prefHeight="30.0" prefWidth="563.0" textFill="#ec1b1b">
                                        <font>
                                           <Font name="System Bold" size="20.0" />
                                        </font>
@@ -61,7 +57,7 @@
                                        <children>
                                           <Pane prefHeight="51.0" prefWidth="41.0" style="-fx-background-color: #CFCFCF; -fx-background-radius: 4;">
                                              <children>
-                                                <Label fx:id="lblRating" alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="2.0" prefHeight="27.0" prefWidth="30.0" text="8.5" textAlignment="CENTER" textFill="#ec1b1b">
+                                                <Label fx:id="lblRating" alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="2.0" prefHeight="27.0" prefWidth="30.0" textAlignment="CENTER" textFill="#ec1b1b">
                                                    <font>
                                                       <Font name="System Bold" size="18.0" />
                                                    </font>
@@ -78,11 +74,8 @@
                                              <HBox.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </HBox.margin>
-                                             <image>
-                                                <Image url="@../images/flags/japon.png" />
-                                             </image>
                                           </ImageView>
-                                          <Label fx:id="lblEstrenoDuracion" prefHeight="25.0" prefWidth="224.0" text="2001 · 2h 5m" textFill="WHITE">
+                                          <Label fx:id="lblEstrenoDuracion" prefHeight="25.0" prefWidth="224.0" textFill="WHITE">
                                              <font>
                                                 <Font name="System Bold" size="16.0" />
                                              </font>
@@ -102,16 +95,16 @@
                                           <Insets top="20.0" />
                                        </VBox.margin>
                                        <children>
-                                          <ImageView fx:id="imgNetflix" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                                          <ImageView fx:id="streaming01" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                                              <HBox.margin>
                                                 <Insets right="8.0" />
                                              </HBox.margin>
                                           </ImageView>
-                                          <ImageView fx:id="imgHBO" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-                                          <ImageView fx:id="imgDisney" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-                                          <ImageView fx:id="imgPrimeVideo" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-                                          <ImageView fx:id="imgFilmin" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-                                          <ImageView fx:id="imgAppleTV" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                                          <ImageView fx:id="streaming02" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                                          <ImageView fx:id="streaming03" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                                          <ImageView fx:id="streaming04" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                                          <ImageView fx:id="streaming05" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                                          <ImageView fx:id="streaming06" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
                                        </children>
                                     </HBox>
                                  </children>
@@ -131,7 +124,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Label fx:id="lblFechaVista" graphicTextGap="6.0" prefHeight="27.0" prefWidth="160.0" style="-fx-background-color: black;" text="&gt;_Vista:   01/01/2024" textFill="WHITE">
+                                    <Label fx:id="lblFechaVista" graphicTextGap="6.0" prefHeight="27.0" prefWidth="160.0" style="-fx-background-color: black;" text="&gt;_Vista:   01/01/2024 " textFill="WHITE">
                                        <HBox.margin>
                                           <Insets />
                                        </HBox.margin>
@@ -219,7 +212,7 @@
                                           <Insets right="15.0" />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label fx:id="lblReparto0" prefHeight="25.0" prefWidth="210.0" text="ActorActriz" textFill="WHITE">
+                                    <Label fx:id="lblReparto0" prefHeight="25.0" prefWidth="210.0" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
@@ -236,7 +229,7 @@
                                           <Insets right="15.0" />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label fx:id="lblReparto1" prefHeight="25.0" prefWidth="210.0" text="ActorActriz" textFill="WHITE">
+                                    <Label fx:id="lblReparto1" prefHeight="25.0" prefWidth="210.0" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
@@ -253,7 +246,7 @@
                                           <Insets right="15.0" />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label fx:id="lblReparto2" prefHeight="25.0" prefWidth="210.0" text="ActorActriz" textFill="WHITE">
+                                    <Label fx:id="lblReparto2" prefHeight="25.0" prefWidth="210.0" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
@@ -270,7 +263,7 @@
                                           <Insets right="15.0" />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label fx:id="lblReparto3" prefHeight="25.0" prefWidth="210.0" text="ActorActriz" textFill="WHITE">
+                                    <Label fx:id="lblReparto3" prefHeight="25.0" prefWidth="210.0" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
@@ -300,7 +293,7 @@
                               <Insets bottom="10.0" top="20.0" />
                            </VBox.margin>
                         </Label>
-                        <Label fx:id="lblSinopsis" alignment="TOP_LEFT" prefHeight="190.0" prefWidth="1250.0" text="Ejemplo texto sinopsis" textFill="WHITE" wrapText="true">
+                        <Label fx:id="lblSinopsis" alignment="TOP_LEFT" prefHeight="190.0" prefWidth="1250.0" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
