--- a/src/main/resources/views/PaneBusqueda.fxml
+++ b/src/main/resources/views/PaneBusqueda.fxml
@@ -1,89 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneBusquedaController">
    <children>
-      <VBox prefWidth="1350.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
+      <VBox alignment="TOP_CENTER" prefHeight="800.0" prefWidth="1350.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
          <children>
-            <Pane style="-fx-background-color: #3B3B3B; -fx-background-radius: 8;">
+            <GridPane alignment="TOP_CENTER" prefHeight="740.0" prefWidth="1200.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="60.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <HBox fx:id="line0" alignment="CENTER" spacing="30.0">
+                     <children>
+                        <ImageView fx:id="imgResultado00" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed00" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado01" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed01" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado02" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed02" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado03" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed03" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado04" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed04" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado05" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed05" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado06" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed06" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                     </children>
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </HBox>
+                  <HBox fx:id="line1" alignment="CENTER" spacing="30.0" GridPane.rowIndex="1">
+                     <children>
+                        <ImageView fx:id="imgResultado10" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed10" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado11" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed11" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado12" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed12" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado13" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed13" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado14" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed14" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado15" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed15" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado16" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed16" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox fx:id="line2" alignment="CENTER" spacing="30.0" GridPane.rowIndex="2">
+                     <children>
+                        <ImageView fx:id="imgResultado20" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed20" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado21" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed21" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado22" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed22" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado23" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed23" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado24" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed24" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado25" fitHeight="200.0" fitWidth="145.0" onMouseClicked="#imageViewPressed25" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="imgResultado26" fitHeight="200.0" fitWidth="145.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+               </children>
+               <padding>
+                  <Insets bottom="30.0" left="30.0" right="30.0" top="40.0" />
+               </padding>
                <VBox.margin>
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
-            </Pane>
-            <ScrollPane fitToWidth="true" hbarPolicy="NEVER" pannable="true" prefHeight="702.0" prefWidth="1203.0" vbarPolicy="NEVER">
-               <content>
-                  <GridPane prefHeight="942.0" prefWidth="1200.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="60.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <HBox fx:id="line0" alignment="CENTER" prefHeight="216.0" prefWidth="1287.0" spacing="30.0">
-                           <children>
-                              <ImageView fx:id="imgResultado00" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed00" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado01" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed01" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado02" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed02" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado03" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed03" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado04" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed04" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado05" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed05" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado06" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed06" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                           </children>
-                           <GridPane.margin>
-                              <Insets />
-                           </GridPane.margin>
-                        </HBox>
-                        <HBox fx:id="line1" alignment="CENTER" prefHeight="100.0" prefWidth="1200.0" spacing="30.0" GridPane.rowIndex="1">
-                           <children>
-                              <ImageView fx:id="imgResultado10" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed10" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado11" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed11" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado12" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed12" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado13" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed13" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado14" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed14" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado15" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed15" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado16" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed16" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                           </children>
-                        </HBox>
-                        <HBox fx:id="line2" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0" GridPane.rowIndex="2">
-                           <children>
-                              <ImageView fx:id="imgResultado20" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed20" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado21" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed21" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado22" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed22" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado23" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed23" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado24" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed24" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado25" fitHeight="200.0" fitWidth="150.0" onMouseClicked="#imageViewPressed25" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                              <ImageView fx:id="imgResultado26" fitHeight="200.0" fitWidth="150.0"  pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
-                           </children>
-                        </HBox>
-                        <HBox fx:id="line3" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="3">
-                           <GridPane.margin>
-                              <Insets bottom="20.0" />
-                           </GridPane.margin>
-                        </HBox>
-                     </children>
-                     <padding>
-                        <Insets bottom="30.0" left="30.0" right="30.0" top="40.0" />
-                     </padding>
-                  </GridPane>
-               </content>
-               <VBox.margin>
-                  <Insets left="30.0" right="30.0" />
-               </VBox.margin>
-            </ScrollPane>
+            </GridPane>
          </children>
       </VBox>
    </children>
